# einorm

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.github/workflows/: publish.yaml  publish.yml  test.yml
einorm/: __init__.py  einorm.py
tests/: test_einorm.py
