[tool.poetry]
name = "einorm"
version = "0.1.1"
description = "An einops-style generalized normalization layer."
authors = ["junhsss <junhsssr@gmail.com>"]
readme = "README.md"
packages = [
    { include = "einorm" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"

[tool.poetry.group.test.dependencies]
functorch = "^1.13"
torch = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
